# memory-platform

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DASHBOARD.md  README.md  docker-compose.yml  export-neon-metrics.sh  export-obsidian-index.sh  export-portfolio-mcp.sh  ingest.sh  run-mcp-server.sh  sync-to-neon.sh
.github/workflows/: ci.yml
config/: memory.env.example
docs/: OPERATIONS_STATUS.md  VPS_ROLLOUT.md
examples/: test_fastembed.rs
launchd/: com.memory-platform.archive-verify.plist.template  com.memory-platform.dashboard.plist.template  com.memory-platform.full-recovery.plist.template  com.memory-platform.neon-count-audit.plist.template  com.memory-platform.neon-reconcile.plist.template  com.memory-platform.neon-retry.plist.template  com.memory-platform.neon-sync.plist.template
macos-app/: Info.plist  MemoryPlatformApp.swift
migrations/: 001_initial.sql  002_hybrid_decay_contradiction.sql  003_session_vault_xref.sql  004_embeddings_unique_source.sql  005_embeddings_2048.sql  006_updated_at_triggers.sql  007_code_changes_embedding_2048.sql  008_storage_tiers_and_archive.sql  009_sync_key_uniqueness.sql  010_session_source_keys.sql  010_shared_event_sync.sql  011_derived_embeddings_2048.sql  012_fts_input_size_guard.sql
scripts/: archive-documents.sh  bootstrap.sh  build-macos-dashboard-app.sh  check_secrets.sh  extract_sessions.py  ingest.py  install-dashboard-runtime.sh  install-full-recovery-runtime.sh  install-memory-dashboard.sh  install-memory-release.sh  install-neon-sync-launchd.sh  mcp-entrypoint.sh  rehydrate_local.sh  restore-archive-documents.sh  run-full-neon-recovery.sh  run-memory-maintenance.sh  run_embedding_repair_detached.sh  start-memory-dashboard.sh  validate-main-vault.sh  verify-memory-archive.sh  verify_backups.py
src/: config.rs  lib.rs  main.rs
src/api/: auth.rs  dto.rs  mod.rs
src/api/handlers/: agents.rs  context.rs  events.rs  experiences.rs  ingestion.rs  memories.rs  mod.rs  procedures.rs  root.rs  search.rs  sessions.rs
src/db/: mod.rs  neo4j.rs  postgres.rs  redis.rs
src/ingest/: codex_sessions.rs  config.rs  logs.rs  mod.rs  sessions.rs  vault.rs
src/mcp/: hooks.rs  mod.rs  tools.rs  transport.rs
src/migrations/: mod.rs
src/models/: agent.rs  code_change.rs  config_entry.rs  contradiction.rs  document.rs  embedding.rs  events.rs  experience.rs  memory.rs  mod.rs  procedure.rs  project.rs  relationship.rs  session.rs  summary.rs  trading_result.rs
src/search/: bm25.rs  mod.rs  rrf.rs  rsf.rs  vector.rs
src/services/: context.rs  contradiction.rs  decay.rs  embedding.rs  experience.rs  ingestion.rs  mod.rs  procedure.rs
systemd/: memory-platform-dashboard.service.template  memory-platform-maintenance.service.template
systemd/user/: memory-archive-verify.service  memory-archive-verify.timer  memory-backup-verify.service  memory-backup-verify.timer  memory-ingest.service  memory-ingest.timer  memory-neon-sync.service  memory-neon-sync.timer  memory-platform.service
tests/: integration.rs  mcp.rs
